# MCP_server

./: .env.example  README.md  pyproject.toml
src/: main.py
src/configs/: db.py  db_async.py
src/db/: sqlalchemy.py
src/models/: __init__.py  mcp_log.py  search_turn.py  user.py
src/services/: smart_search_service.py
src/sse/: run_http_server.py
src/stdio/: run_stdio_server.py
src/tests/: test_search.py
src/tools/: persistence.py  rewrite.py  scrape.py  smart_search.py  summarize.py  tavily.py
src/utils/: context_tools.py  env.py  logger.py  prompt.py  sse.py  state.py
